--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
         </div>
 
         <div class="footer">
-            <p>ThEVlaDGamE 2020 <a href="https://discord.gg/3ZDupytY4G">Дискорд-сервер</a></p>
+            <p>ThEVlaDGamE  |  2020  | v.1.0.2  |  <a href="https://discord.gg/3ZDupytY4G">Дискорд-сервер</a></p>
         </div>
     </div>
 
