--- a/index.html
+++ b/index.html
@@ -5,10 +5,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Mandate calculator</title>
+    <title>Калькулятор мандатов</title>
     <link rel="stylesheet" href="style.css">
 
-    <link rel="shortcut icon" href="img/icon.png">
+    <link rel="shortcut icon" href="icon.png">
 
     <script src="index.js"></script>
 </head>
