--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
             Калькулятор мандатов
         </h1>
         <h5>
-            * - считается с помощью медота <a href="https://ru.wikipedia.org/wiki/Метод_Хэйра">Хейра</a>
+            * - используется метод <a href="https://ru.wikipedia.org/wiki/Метод_Хэйра">Хейра</a>
         </h5>
 
         <div class="fon">
